--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    name="description"
+    content="A modern blog post application built with React. Features include user registration, login, profile management, and a rich blogging interface. Enjoy an intuitive and responsive design for creating and sharing blog posts."
+  />
+  
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Blog Post</title>
+    <title>BlogPost</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
